# project1_Ter-Poghosyan_Yurii_M25-555

./: README.md  project1  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
